--- a/website/examples/multinoise.mdx
+++ b/website/examples/multinoise.mdx
@@ -14,8 +14,8 @@ const biomeSource = new MultiNoise(new Climate.Parameters([
 	[Climate.parameters(0.0, 0.5, 0.0, 0.0, 0.0, 0.0, 0.375), () => 'minecraft:warped_forest'],
 	[Climate.parameters(-0.5, 0.0, 0.0, 0.0, 0.0, 0.0, 0.175), () => 'minecraft:basalt_deltas'],
 ]))
-const noiseSampler = new NoiseSampler(4, 4, 32, biomeSource, NoiseSettings.fromJson(null),netherOctaves, BigInt(5392))
-const climateSampler = (x, y, z) => noiseSampler.getClimate(x, y, z)
+const noiseSampler = new NoiseSampler(4, 4, 32, NoiseSettings.fromJson(null), netherOctaves, BigInt(5392))
+const climateSampler = (x, y, z) => noiseSampler.sample(x, y, z)
 
 biomeSource.getBiome(x, 64, y, climateSampler)
 ```
@@ -29,8 +29,8 @@ biomeSource.getBiome(x, 64, y, climateSampler)
 			[Climate.parameters(0.0, 0.5, 0.0, 0.0, 0.0, 0.0, 0.375), () => 'minecraft:warped_forest'],
 			[Climate.parameters(-0.5, 0.0, 0.0, 0.0, 0.0, 0.0, 0.175), () => 'minecraft:basalt_deltas'],
 		]))
-		const sampler = new NoiseSampler(4, 4, 32, source, NoiseSettings.fromJson(null), netherOctaves, BigInt(5392))
-		const climate = (x, y, z) => sampler.getClimate(x, y, z)
+		const sampler = new NoiseSampler(4, 4, 32, NoiseSettings.fromJson(null), netherOctaves, BigInt(5392))
+		const climate = (x, y, z) => sampler.sample(x, y, z)
 		return { source, climate }
 	}}
 	sampler={({ source, climate }) => (x, y) => source.getBiome(x, 64, y, climate)}
@@ -41,8 +41,8 @@ biomeSource.getBiome(x, 64, y, climateSampler)
 	fetcher={() => fetch('https://raw.githubusercontent.com/misode/vanilla-worldgen/master/dimension/overworld.json').then(r => r.json())}
 	initializer={data => {
 		const source = MultiNoise.fromJson(data.generator.biome_source)
-		const sampler = new NoiseSampler(4, 4, 32, source, NoiseSettings.fromJson(null), overworldOctaves, BigInt(5392))
-		const climate = (x, y, z) => sampler.getClimate(x, y, z)
+		const sampler = new NoiseSampler(4, 4, 32, NoiseSettings.fromJson(null), overworldOctaves, BigInt(5392))
+		const climate = (x, y, z) => sampler.sample(x, y, z)
 		return { source, climate }
 	}}
 	sampler={({ source, climate }) => (x, y) => source.getBiome(x, 64, y, climate)}
