--- a/website/examples/splines.mdx
+++ b/website/examples/splines.mdx
@@ -43,20 +43,22 @@ const value = spline.apply(0.4)
 
 ## With TerrainShaper
 
+export const shaper = TerrainShaper.overworld()
+
 <SplinePlot name="Offset from continentalness [-1.1, 1]" width={WIDTH} height={HEIGHT} range={[-1.1, 1]}
-	spline={x => TerrainShaper.offset(TerrainShaper.point(x, -0.45, 0))}
+	spline={x => shaper.offset(TerrainShaper.point(x, -0.45, 0))}
 />
 
 <SplinePlot name="Factor from continentalness [-0.3, 0.3]" width={WIDTH} height={HEIGHT} range={[-0.3, 0.3]}
-	spline={x => TerrainShaper.factor(TerrainShaper.point(x, -0.45, 0))}
+	spline={x => shaper.factor(TerrainShaper.point(x, -0.45, 0))}
 />
 
 <SplinePlot name="Jaggedness from continentalness [-0.3, 0.3]" width={WIDTH} height={HEIGHT} range={[-0.3, 0.3]}
-	spline={x => TerrainShaper.jaggedness(TerrainShaper.point(x, -0.8, 0.6))}
+	spline={x => shaper.jaggedness(TerrainShaper.point(x, -0.8, 0.6))}
 />
 
 <SplinePlot name="Jaggedness from ridges [0, 1]" width={WIDTH} height={HEIGHT} range={[0, 1]}
-	spline={x => TerrainShaper.jaggedness({ continents: 0.11, erosion: -0.45, weirdness: 0, ridges: x })}
+	spline={x => shaper.jaggedness({ continents: 0.11, erosion: -0.45, weirdness: 0, ridges: x })}
 />
 
 export function ridgeSpline(f1, f2, f3, f4, f5, f6) {
