--- a/website/examples/splines.mdx
+++ b/website/examples/splines.mdx
@@ -1,8 +1,9 @@
 ---
 title: Splines
 ---
-import { Spline, TerrainShaper } from 'deepslate'
+import { CubicSpline } from 'deepslate'
 import { SplinePlot } from '@site/src/components/Plot'
+import { SimpleExample, NestedExample } from '@site/src/components/examples/Splines'
 
 export const WIDTH = 300
 export const HEIGHT = 200
@@ -10,72 +11,25 @@ export const HEIGHT = 200
 ## Simple
 
 ```ts
-const spline = new Spline<number>('spline', x => x)
+const spline = new CubicSpline.MultiPoint<number>({ compute: x => x })
 	.addPoint(0, 0)
 	.addPoint(1, 1)
 
-const value = spline.apply(0.4)
+const value = spline.compute(0.4)
 ```
 
-<SplinePlot name="Simple [0, 0] -> [1, 1]" width={WIDTH} height={HEIGHT} range={[0, 1]}
-	spline={new Spline('spline', x => x).addPoint(0, 0).addPoint(1, 1)}	
-/>
+<SimpleExample />
 
 ## Nested
 
 ```ts
-const spline = new Spline('spline2', x => x)
+const spline = new CubicSpline.MultiPoint({ compute: x => x })
 	.addPoint(0, 0)
-	.addPoint(0.4, new Spline('spline3', x => 2 * x - x * x)
+	.addPoint(0.4, new CubicSpline.MultiPoint({ compute: x => 2 * x - x * x })
 		.addPoint(0.2, -1)
 		.addPoint(1, 1))
 
-const value = spline.apply(0.4)
+const value = spline.compute(0.4)
 ```
 
-<SplinePlot name="Nested with different mapper" width={WIDTH} height={HEIGHT} range={[0, 1]}
-	spline={new Spline('spline2', x => x)
-	.addPoint(0, 0)
-	.addPoint(0.4, new Spline('spline3', x => 2 * x - x * x)
-		.addPoint(0.2, -1)
-		.addPoint(1, 1))}
-/>
-
-## With TerrainShaper
-
-export const shaper = TerrainShaper.overworld()
-
-<SplinePlot name="Offset from continentalness [-1.1, 1]" width={WIDTH} height={HEIGHT} range={[-1.1, 1]}
-	spline={x => shaper.offset(TerrainShaper.point(x, -0.45, 0))}
-/>
-
-<SplinePlot name="Factor from continentalness [-0.3, 0.3]" width={WIDTH} height={HEIGHT} range={[-0.3, 0.3]}
-	spline={x => shaper.factor(TerrainShaper.point(x, -0.45, 0))}
-/>
-
-<SplinePlot name="Jaggedness from continentalness [-0.3, 0.3]" width={WIDTH} height={HEIGHT} range={[-0.3, 0.3]}
-	spline={x => shaper.jaggedness(TerrainShaper.point(x, -0.8, 0.6))}
-/>
-
-<SplinePlot name="Jaggedness from ridges [0, 1]" width={WIDTH} height={HEIGHT} range={[0, 1]}
-	spline={x => shaper.jaggedness({ continents: 0.11, erosion: -0.45, weirdness: 0, ridges: x })}
-/>
-
-export function ridgeSpline(f1, f2, f3, f4, f5, f6) {
-	const f7 = Math.max(0.5 * (f2 - f1), f6)
-	const f8 = 5.0 * (f3 - f2)
-	return new Spline('ridge', x => x)
-		.addPoint(-1.0, f1, f7)
-		.addPoint(-0.4, f2, Math.min(f7, f8))
-		.addPoint(0.0, f3, f8)
-		.addPoint(0.4, f4, 2.0 * (f4 - f3))
-		.addPoint(1.0, f5, 0.7 * (f5 - f4))
-}
-
-<SplinePlot name="Wide plateau from ridges [-1, 1]" width={WIDTH} height={HEIGHT} range={[-1, 1]}
-	spline={ridgeSpline(-0.1 - 0.15, 0.5 * 0.7, 0.5 * 0.7, 0.5 * 0.7, 0.6 * 0.7, 0.5)}
-/>
-
-<SplinePlot name="Plains ridges from ridges [-1, 1]" width={WIDTH} height={HEIGHT} range={[-1, 1]}
-	spline={ridgeSpline(-0.1, 0.01, 0.01, 0.03, 0.1, 0.5)}
-/>
+<NestedExample />
