--- a/website/examples/multinoise.mdx
+++ b/website/examples/multinoise.mdx
@@ -1,50 +1,29 @@
 ---
 title: Multi Noise
 ---
-import { Climate, MultiNoise, NoiseSampler, NoiseSettings } from 'deepslate'
-import Plot from '@site/src/components/Plot'
-import colors from './biomeColors.json'
-import { netherOctaves, overworldOctaves } from './noisesampler.mdx'
+import { NetherExample } from '@site/src/components/examples/MultiNoise'
 
 ```ts
-const biomeSource = new MultiNoise(new Climate.Parameters([
-	[Climate.parameters(0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0), () => 'minecraft:nether_wastes'],
-	[Climate.parameters(0.0, -0.5, 0.0, 0.0, 0.0, 0.0, 0.0), () => 'minecraft:soul_sand_valley'],
-	[Climate.parameters(0.4, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0), () => 'minecraft:crimson_forest'],
-	[Climate.parameters(0.0, 0.5, 0.0, 0.0, 0.0, 0.0, 0.375), () => 'minecraft:warped_forest'],
-	[Climate.parameters(-0.5, 0.0, 0.0, 0.0, 0.0, 0.0, 0.175), () => 'minecraft:basalt_deltas'],
-]))
-const noiseSampler = new NoiseSampler(4, 4, 32, NoiseSettings.fromJson(null), netherOctaves, BigInt(5392))
-const climateSampler = (x, y, z) => noiseSampler.sample(x, y, z)
+const temperatureNoise = WorldgenRegistries.NOISE.register(
+	Identifier.parse('test:temperature'), { firstOctave: -7, amplitudes: [1, 1] })
+const vegetationNoise = WorldgenRegistries.NOISE.register(
+	Identifier.parse('test:vegetation'), { firstOctave: -7, amplitudes: [1, 1] })
+const settings = NoiseGeneratorSettings.create({
+	noiseRouter: NoiseRouter.create({
+		temperature: new DensityFunction.Noise(0.25, 0, temperatureNoise),
+		vegetation: new DensityFunction.Noise(0.25, 0, vegetationNoise),
+	}),
+})
 
-biomeSource.getBiome(x, 64, y, climateSampler)
+const biomeSource = new MultiNoiseBiomeSource([
+	[Climate.parameters(0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0), () => Identifier.create('nether_wastes')],
+	[Climate.parameters(0.0, -0.5, 0.0, 0.0, 0.0, 0.0, 0.0), () => Identifier.create('soul_sand_valley')],
+	[Climate.parameters(0.4, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0), () => Identifier.create('crimson_forest')],
+	[Climate.parameters(0.0, 0.5, 0.0, 0.0, 0.0, 0.0, 0.375), () => Identifier.create('warped_forest')],
+	[Climate.parameters(-0.5, 0.0, 0.0, 0.0, 0.0, 0.0, 0.175), () => Identifier.create('basalt_deltas')],
+])
+const randomState = new RandomState(settings, BigInt(5))
+biomeSource.getBiome(x, 64, y, randomState.sampler)
 ```
 
-<Plot name="Nether" width={160} scale={2}
-	initializer={() => {
-		const source = new MultiNoise(new Climate.Parameters([
-			[Climate.parameters(0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0), () => 'minecraft:nether_wastes'],
-			[Climate.parameters(0.0, -0.5, 0.0, 0.0, 0.0, 0.0, 0.0), () => 'minecraft:soul_sand_valley'],
-			[Climate.parameters(0.4, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0), () => 'minecraft:crimson_forest'],
-			[Climate.parameters(0.0, 0.5, 0.0, 0.0, 0.0, 0.0, 0.375), () => 'minecraft:warped_forest'],
-			[Climate.parameters(-0.5, 0.0, 0.0, 0.0, 0.0, 0.0, 0.175), () => 'minecraft:basalt_deltas'],
-		]))
-		const sampler = new NoiseSampler(4, 4, 32, NoiseSettings.fromJson(null), netherOctaves, BigInt(5392))
-		const climate = (x, y, z) => sampler.sample(x, y, z)
-		return { source, climate }
-	}}
-	sampler={({ source, climate }) => (x, y) => source.getBiome(x, 64, y, climate)}
-	colorizer={id => colors[id] ?? [0, 0, 0]}
-/>
-
-<Plot name="Overworld" width={160} scale={2}
-	fetcher={() => fetch('https://raw.githubusercontent.com/misode/vanilla-worldgen/master/dimension/overworld.json').then(r => r.json())}
-	initializer={data => {
-		const source = MultiNoise.fromJson(data.generator.biome_source)
-		const sampler = new NoiseSampler(4, 4, 32, NoiseSettings.fromJson(null), overworldOctaves, BigInt(5392))
-		const climate = (x, y, z) => sampler.sample(x, y, z)
-		return { source, climate }
-	}}
-	sampler={({ source, climate }) => (x, y) => source.getBiome(x, 64, y, climate)}
-	colorizer={id => colors[id] ?? [0, 0, 0]}
-/>
+<NetherExample />
